Fixed UI on mobile

--- a/src/components/Platform/Profil/style.css
+++ b/src/components/Platform/Profil/style.css
@@ -3,8 +3,8 @@
   display: flex;
   flex: 1;
   flex-wrap: wrap;
-	padding: 1%;
-	width: 90%
+  padding: 1%;
+  width: 90%;
 }
 
 .Profile .form-container {
@@ -13,8 +13,8 @@
 }
 
 .Profile .form-group {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
   width: 100%;
   margin-bottom: 25px;
 }
@@ -40,11 +40,11 @@
 }
 
 .Profile .form-group .file-upload-feedback {
-	color: grey;
-	flex: 2;
-	font-size: 10px;
-	line-height: 10px;
-	margin-bottom: 0.25%;
+  color: grey;
+  flex: 2;
+  font-size: 10px;
+  line-height: 10px;
+  margin-bottom: 0.25%;
 }
 .Profile .label-right {
   text-align: right;
@@ -129,22 +129,21 @@
 }
 
 .Profile input[type='file'] {
-	width: 100%;
+  width: 100%;
 }
-@media screen and (max-width: 1024px){
-	.Profile .double-form-container {
-		width: 100%;
-	}
+@media screen and (max-width: 1024px) {
+  .Profile .double-form-container {
+    width: 100%;
+  }
 }
 
-@media screen and (max-width: 768px){
-	
-	.Profile .form-group > label {
-		font-size: 13px;
-		line-height: 18px;
-		white-space: normal;
-	}
-	.Profile .toggle {
-		font-size: 14px;
-	}
+@media screen and (max-width: 768px) {
+  .Profile .form-group > label {
+    font-size: 13px;
+    line-height: 18px;
+    white-space: normal;
+  }
+  .Profile .toggle {
+    font-size: 14px;
+  }
 }
